# speech-to-text

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.uk.md  SECURITY.md  build.bat  install.bat  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt  run.bat  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: __init__.py  __main__.py  app.py  config.py  constants.py  main.py
src/audio/: __init__.py  sounds.py
src/core/: __init__.py  api_transcriber.py  dictionary.py  history.py  hotkey_manager.py  local_transcriber.py  recorder.py  text_processor.py  transcriber.py
src/ui/: __init__.py  floating_button.py  history_window.py  overlay.py  settings_window.py  tray.py
src/ui/themes/: __init__.py  dark.qss  light.qss  theme_manager.py
src/utils/: __init__.py  clipboard.py  gpu_detect.py  log_filter.py  model_manager.py  secure_key.py  updater.py
tests/: __init__.py  conftest.py  test_api_transcriber.py  test_config.py  test_dictionary.py  test_history.py  test_local_transcriber.py  test_log_filter.py  test_recorder.py  test_secure_key.py  test_text_processor.py
