[project]
name = "voicetype"
version = "1.0.0"
description = "Voice-to-text input for Windows powered by OpenAI Whisper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
